--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 #root {
-    min-height: 100vh;
-    overflow-x: hidden;
-    position: relative;
+    height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
